cmake_minimum_required(VERSION 3.31)
project(Day_12_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(Day_12_1 main.cpp
        TNRN.cpp
        TSRN.cpp
        Name.cpp
        Pattern.cpp
        ThricePrintHelloWorld.cpp
        CollegeName.cpp
        12.1cppfiles/DisplayYear.cpp
        12.1cppfiles/SquareOfGiveNumber.cpp
        12.1cppfiles/Product.cpp
        12.1cppfiles/EvenOrOdd.cpp
        12.1cppfiles/Grade.cpp
        12.1cppfiles/AreaofRectangle.cpp)
